changed inflation of consumer prices clean and added tableau file

--- a/notebooks/initial_data_inspection_pav.ipynb
+++ b/notebooks/initial_data_inspection_pav.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "c706ac32",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "e622a31f",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "[949 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,6 +179,291 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "131f6cf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity</th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Inflation, consumer prices (annual %)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>12.686269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>6.784596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>8.680571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>26.418665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>-6.811161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9579</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>10.618866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9580</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>255.305000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9581</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>557.201840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9582</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>98.546104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9583</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>104.705170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9584 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Entity Code  Year  Inflation, consumer prices (annual %)\n",
+       "0     Afghanistan  AFG  2005                              12.686269\n",
+       "1     Afghanistan  AFG  2006                               6.784596\n",
+       "2     Afghanistan  AFG  2007                               8.680571\n",
+       "3     Afghanistan  AFG  2008                              26.418665\n",
+       "4     Afghanistan  AFG  2009                              -6.811161\n",
+       "...           ...  ...   ...                                    ...\n",
+       "9579     Zimbabwe  ZWE  2018                              10.618866\n",
+       "9580     Zimbabwe  ZWE  2019                             255.305000\n",
+       "9581     Zimbabwe  ZWE  2020                             557.201840\n",
+       "9582     Zimbabwe  ZWE  2021                              98.546104\n",
+       "9583     Zimbabwe  ZWE  2022                             104.705170\n",
+       "\n",
+       "[9584 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inflation = pd.read_csv('/Users/pavelpavlov/Desktop/gaussian_peppers/food_diets_eda/raw_data/inflation-of-consumer-prices/inflation-of-consumer-prices.csv')\n",
+    "inflation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "11e92b38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity</th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Inflation, consumer prices (annual %)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>12.686269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>6.784596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>8.680571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>26.418665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>-6.811161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9579</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>10.618866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9580</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>255.305000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9581</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>557.201840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9582</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>98.546104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9583</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>104.705170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9584 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Entity Code  Year  Inflation, consumer prices (annual %)\n",
+       "0     Afghanistan  AFG  2005                              12.686269\n",
+       "1     Afghanistan  AFG  2006                               6.784596\n",
+       "2     Afghanistan  AFG  2007                               8.680571\n",
+       "3     Afghanistan  AFG  2008                              26.418665\n",
+       "4     Afghanistan  AFG  2009                              -6.811161\n",
+       "...           ...  ...   ...                                    ...\n",
+       "9579     Zimbabwe  ZWE  2018                              10.618866\n",
+       "9580     Zimbabwe  ZWE  2019                             255.305000\n",
+       "9581     Zimbabwe  ZWE  2020                             557.201840\n",
+       "9582     Zimbabwe  ZWE  2021                              98.546104\n",
+       "9583     Zimbabwe  ZWE  2022                             104.705170\n",
+       "\n",
+       "[9584 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inflation"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "aaa7a948",
    "metadata": {},
@@ -186,6 +471,180 @@
     "diet_unafordable summary: \n",
     "949 rows and 4 columns\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "cdaf7344",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity</th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Inflation, consumer prices (annual %)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>4.975952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0.626149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2.302373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>5.601888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5.133203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9579</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>10.618866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9580</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>255.305000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9581</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>557.201840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9582</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>98.546104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9583</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>104.705170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1506 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Entity Code  Year  Inflation, consumer prices (annual %)\n",
+       "12    Afghanistan  AFG  2017                               4.975952\n",
+       "13    Afghanistan  AFG  2018                               0.626149\n",
+       "14    Afghanistan  AFG  2019                               2.302373\n",
+       "15    Afghanistan  AFG  2020                               5.601888\n",
+       "16    Afghanistan  AFG  2021                               5.133203\n",
+       "...           ...  ...   ...                                    ...\n",
+       "9579     Zimbabwe  ZWE  2018                              10.618866\n",
+       "9580     Zimbabwe  ZWE  2019                             255.305000\n",
+       "9581     Zimbabwe  ZWE  2020                             557.201840\n",
+       "9582     Zimbabwe  ZWE  2021                              98.546104\n",
+       "9583     Zimbabwe  ZWE  2022                             104.705170\n",
+       "\n",
+       "[1506 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df = inflation[inflation['Year'].isin([2017, 2018, 2019, 2020, 2021, 2022, 2023, 2024])]\n",
+    "filtered_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4769ff79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/pavelpavlov/Desktop/gaussian_peppers/food_diets_eda/notebooks'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "04f617ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df.to_csv('/Users/pavelpavlov/Desktop/gaussian_peppers/food_diets_eda/cleaned_data/inflation_of_consumer_prices_cleaned.csv', index=False)"
    ]
   },
   {
