imputed missing values and resaved all wfp tables

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "id": "b482d278",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "id": "7cc408a4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "id": "262e5549",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "id": "9acec036",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "id": "b2629976",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "4     AGO  2017  miscellaneous food      9.00   4.500000"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "id": "a6b9fed1",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "id": "738a40f7",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "id": "df52164c",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "id": "7407adaf",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "4     AGO  2018       milk and dairy    408.01  34.000833"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "id": "f0d9de70",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "id": "c2c76531",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "id": "e9c6321f",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
        "4     AGO  2019  miscellaneous food      8.28   2.760000"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "id": "01dc392c",
    "metadata": {},
    "outputs": [],
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "id": "709c5d24",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "id": "f388fd48",
    "metadata": {},
    "outputs": [
@@ -560,7 +560,7 @@
        "4     AFG  2020     pulses and nuts   328.820   1.208897"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "id": "eee773e8",
    "metadata": {},
    "outputs": [],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "id": "82e4cd8c",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "id": "daa5bd67",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "4     AFG  2021     pulses and nuts    468.20   1.147549"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "id": "33566376",
    "metadata": {},
    "outputs": [],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "id": "aa1decaf",
    "metadata": {},
    "outputs": [],
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "id": "6339861a",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
        "4     AFG  2022     pulses and nuts   519.420   1.273088"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "id": "811630df",
    "metadata": {},
    "outputs": [],
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "id": "8106e00e",
    "metadata": {},
    "outputs": [],
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "id": "24ff7cda",
    "metadata": {},
    "outputs": [
@@ -920,7 +920,7 @@
        "4     AFG  2023     pulses and nuts    562.91   1.379681"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "id": "3c560bfa",
    "metadata": {},
    "outputs": [],
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 26,
    "id": "4e5b919a",
    "metadata": {},
    "outputs": [],
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 27,
    "id": "478d6cab",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1040,7 @@
        "4     AFG  2024     pulses and nuts    608.14   1.490539"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 28,
    "id": "178abc9b",
    "metadata": {},
    "outputs": [],
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 29,
    "id": "3a100d8a",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 30,
    "id": "cb17bcd4",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1160,7 @@
        "4     AFG  2025     pulses and nuts    443.65   1.449837"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 31,
    "id": "779c7408",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "id": "f205095d",
    "metadata": {},
    "outputs": [],
@@ -1217,7 +1217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pandas_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1231,7 +1231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
