added map visualization in Tableau

--- a/notebooks/initial_data_inspection_pav.ipynb
+++ b/notebooks/initial_data_inspection_pav.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "c706ac32",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "e622a31f",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "[949 rows x 4 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,6 +273,34 @@
    ],
    "source": [
     "diet_unafordable.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c5dcf0c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 949 entries, 0 to 948\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                                                    Non-Null Count  Dtype  \n",
+      "---  ------                                                    --------------  -----  \n",
+      " 0   Entity                                                    949 non-null    object \n",
+      " 1   Code                                                      883 non-null    object \n",
+      " 2   Year                                                      949 non-null    int64  \n",
+      " 3   Share of the population who cannot afford a healthy diet  949 non-null    float64\n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 29.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "diet_unafordable.info()"
    ]
   },
   {
