--- a/notebooks/initial_data_inspection_pav.ipynb
+++ b/notebooks/initial_data_inspection_pav.ipynb
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "f6bbdc9e",
    "metadata": {},
    "outputs": [
@@ -936,6 +936,7 @@
        "      <th>category</th>\n",
        "      <th>sumPrice</th>\n",
        "      <th>meanPrice</th>\n",
+       "      <th>medianPrice</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -946,6 +947,7 @@
        "      <td>cereals and tubers</td>\n",
        "      <td>154.72000</td>\n",
        "      <td>0.512318</td>\n",
+       "      <td>0.43000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -954,6 +956,7 @@
        "      <td>non-food</td>\n",
        "      <td>1578.63000</td>\n",
        "      <td>4.111016</td>\n",
+       "      <td>2.31500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -962,6 +965,7 @@
        "      <td>cereals and tubers</td>\n",
        "      <td>123.54000</td>\n",
        "      <td>2.573750</td>\n",
+       "      <td>3.05500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -970,6 +974,7 @@
        "      <td>milk and dairy</td>\n",
        "      <td>538.60000</td>\n",
        "      <td>44.883333</td>\n",
+       "      <td>44.59500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -978,9 +983,11 @@
        "      <td>miscellaneous food</td>\n",
        "      <td>9.00000</td>\n",
        "      <td>4.500000</td>\n",
+       "      <td>4.50000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -994,6 +1001,7 @@
        "      <td>meat, fish and eggs</td>\n",
        "      <td>0.02400</td>\n",
        "      <td>0.006000</td>\n",
+       "      <td>0.00600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3835</th>\n",
@@ -1002,6 +1010,7 @@
        "      <td>miscellaneous food</td>\n",
        "      <td>0.00035</td>\n",
        "      <td>0.000350</td>\n",
+       "      <td>0.00035</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3836</th>\n",
@@ -1010,6 +1019,7 @@
        "      <td>non-food</td>\n",
        "      <td>0.00719</td>\n",
        "      <td>0.000479</td>\n",
+       "      <td>0.00060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3837</th>\n",
@@ -1018,6 +1028,7 @@
        "      <td>oil and fats</td>\n",
        "      <td>0.00240</td>\n",
        "      <td>0.001200</td>\n",
+       "      <td>0.00120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3838</th>\n",
@@ -1026,30 +1037,31 @@
        "      <td>pulses and nuts</td>\n",
        "      <td>0.00229</td>\n",
        "      <td>0.000763</td>\n",
+       "      <td>0.00076</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3839 rows × 5 columns</p>\n",
+       "<p>3839 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     country  year             category    sumPrice  meanPrice\n",
-       "0        AFG  2017   cereals and tubers   154.72000   0.512318\n",
-       "1        AFG  2017             non-food  1578.63000   4.111016\n",
-       "2        AGO  2017   cereals and tubers   123.54000   2.573750\n",
-       "3        AGO  2017       milk and dairy   538.60000  44.883333\n",
-       "4        AGO  2017   miscellaneous food     9.00000   4.500000\n",
-       "...      ...   ...                  ...         ...        ...\n",
-       "3834     ZWE  2025  meat, fish and eggs     0.02400   0.006000\n",
-       "3835     ZWE  2025   miscellaneous food     0.00035   0.000350\n",
-       "3836     ZWE  2025             non-food     0.00719   0.000479\n",
-       "3837     ZWE  2025         oil and fats     0.00240   0.001200\n",
-       "3838     ZWE  2025      pulses and nuts     0.00229   0.000763\n",
+       "     country  year             category    sumPrice  meanPrice  medianPrice\n",
+       "0        AFG  2017   cereals and tubers   154.72000   0.512318      0.43000\n",
+       "1        AFG  2017             non-food  1578.63000   4.111016      2.31500\n",
+       "2        AGO  2017   cereals and tubers   123.54000   2.573750      3.05500\n",
+       "3        AGO  2017       milk and dairy   538.60000  44.883333     44.59500\n",
+       "4        AGO  2017   miscellaneous food     9.00000   4.500000      4.50000\n",
+       "...      ...   ...                  ...         ...        ...          ...\n",
+       "3834     ZWE  2025  meat, fish and eggs     0.02400   0.006000      0.00600\n",
+       "3835     ZWE  2025   miscellaneous food     0.00035   0.000350      0.00035\n",
+       "3836     ZWE  2025             non-food     0.00719   0.000479      0.00060\n",
+       "3837     ZWE  2025         oil and fats     0.00240   0.001200      0.00120\n",
+       "3838     ZWE  2025      pulses and nuts     0.00229   0.000763      0.00076\n",
        "\n",
-       "[3839 rows x 5 columns]"
+       "[3839 rows x 6 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
