--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -1981,7 +1981,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pandas_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1995,7 +1995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
